[gd_scene load_steps=2 format=3 uid="uid://dktbklfhkyeor"]

[ext_resource type="Script" path="res://gui/inventory/Item Inventory/item_slot.gd" id="1_bq652"]

[node name="ItemSlot" type="Control"]
custom_minimum_size = Vector2(95, 95)
layout_mode = 3
anchor_right = 0.082
anchor_bottom = 0.147
offset_right = 0.535995
offset_bottom = -0.255997
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bq652")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
layout_mode = 2
offset_right = 95.0
offset_bottom = 95.0
mouse_filter = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(95, 95)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="LabelName" type="Label" parent="PanelContainer"]
layout_mode = 2
text = "ITEM_NAME"
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true
uppercase = true

[node name="Control" type="Control" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="LabelQuantity" type="Label" parent="PanelContainer/Control"]
layout_mode = 2
offset_left = 55.0
offset_top = 66.0
offset_right = 92.0
offset_bottom = 92.0
text = "x999"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
